# unicode2latex

./: .gitignore  BUGS.md  Makefile  README.md  TESTING.md  input.tex  latex2unicode  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  tox.ini  u2l.py  unicode2latex
.githooks/: pre-commit
.github/workflows/: test.yaml  update-tex-files.yaml
.github/workflows/workflows/: test.yaml
FakePlasTeX/: TokenizerPassThru.py
unicode2latex/: __init__.py  u2l.py
unicode2latex/FakePlasTeX/: FakeContext.py  TokenizerPassThru.py  TokenizerPassThru.py~coldoc  __init__.py
unittests/: __init__.py  test_accent_modes.py  test_accents.py  test_bug5_fix.py  test_bug6_investigation.py  test_bugs.py  test_cli_accent_mode.py  test_cli_convert_quotes.py  test_cli_input_encoding.py  test_fonts.py  test_latex2unicode.py  test_thread_safety.py  test_unicode2latex.py
