[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unicode2latex"
version = "0.2"
authors = [
  { name="Andrea C. G. Mennucci", email="mennucc1@debian.org" },
]
description = "convert unicode to LaTeX and vice-versa"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["latex", "unicode", "conversion", "tex", "typesetting"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/mennucc/unicode2latex"
"Bug Tracker" = "https://github.com/mennucc/unicode2latex/issues"

[project.scripts]
unicode2latex = "u2l:main"
latex2unicode = "u2l:main"

[tool.setuptools]
py-modules = ["u2l"]
