[metadata]
name = unicode2latex
description = convert unicode to LaTeX and vice-versa
long_description = file: README.md
long_description_content_type = text/md
version = 0.2
author = Andrea C. G. Mennucci
author_email = mennucc1@debian.org
url = https://github.com/mennucc/unicode2latex
classifiers=
  Programming Language :: Python :: 3
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent

[options]
python_requires= >=3.6
py_modules = u2l
include_package_data = True
install_requires =

[options.package_data]

[options.entry_points]
console_scripts =
  unicode2latex = u2l:main
  latex2unicode = u2l:main
