[metadata]
name = unicode2latex
description = convert unicode to LaTeX and vice-versa
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2
author = Andrea C. G. Mennucci
author_email = mennucc1@debian.org
url = https://github.com/mennucc/unicode2latex
keywords = latex, unicode, conversion, tex, typesetting
classifiers=
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  Programming Language :: Python :: 3.13
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Intended Audience :: Developers
  Topic :: Text Processing :: Markup :: LaTeX
  Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires= >=3.8
py_modules = u2l
include_package_data = True
install_requires =

[options.package_data]

[options.entry_points]
console_scripts =
  unicode2latex = u2l:main
  latex2unicode = u2l:main
